--- a/mabby.svelte/package.json
+++ b/mabby.svelte/package.json
@@ -48,5 +48,8 @@
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"three": "^0.162.0"
+	}
 }
